STEPS TO REPRODUCE 1. Finish some tasks (actual work done). 2. Open "Task Progress", click on "Finished". 3. Current date & time are automatically populated in the date time field. 4. A progress entry is created for the current date. OBSERVED RESULT 5. I cannot change finished date to yesterday's date anymore. EXPECTED RESULT I should be able to set task's completion date to a time in the past.
Git commit 8ac0753537906f3fdfe074e92291dcf87f4ac265 by Dag Andersen. Committed on 02/12/2019 at 11:09. Pushed by danders into branch '3.2'. Bug 414661 - Can't add progress finish time in the past FIXED-IN: 3.2.2 M +26 -14 src/libs/ui/kpttaskprogresspanel.cpp M +3 -0 src/libs/ui/kpttaskprogresspanel.h M +21 -6 src/libs/ui/kpttaskprogresspanelbase.ui https://commits.kde.org/calligraplan/8ac0753537906f3fdfe074e92291dcf87f4ac265
Git commit 732faf582a2863c245b98016a8f8154b87e3c2af by Dag Andersen. Committed on 10/12/2019 at 10:50. Pushed by danders into branch 'master'. Bug 414661 - Can't add progress finish time in the past FIXED-IN: 3.2.2 (cherry picked from commit 8ac0753537906f3fdfe074e92291dcf87f4ac265) M +26 -14 src/libs/ui/kpttaskprogresspanel.cpp M +3 -0 src/libs/ui/kpttaskprogresspanel.h M +21 -6 src/libs/ui/kpttaskprogresspanelbase.ui https://commits.kde.org/calligraplan/732faf582a2863c245b98016a8f8154b87e3c2af