Bug 414661 - Can't add progress finish time in the past

BUG: 414661
FIXED-IN: 3.2.2
(cherry picked from commit 8ac0753537906f3fdfe074e92291dcf87f4ac265)